# LightyearsGame

./: CMakeLists.txt
lightyears/: CMakeLists.txt
lightyears/include/framework/: application.hpp
lightyears/src/: main.cpp
lightyears/src/framework/: application.cpp
lightyearsEngine/: CMakeLists.txt
lightyearsEngine/include/: entrypoint.hpp
lightyearsEngine/include/framework/: actor.hpp  application.hpp  assetmanager.hpp  core.hpp  delegate.hpp  mathutility.hpp  object.hpp  physicssystem.hpp  timermanager.hpp  world.hpp
lightyearsEngine/include/gameplay/: gamestage.hpp  waitstage.hpp
lightyearsEngine/include/vfx/: particle.hpp
lightyearsEngine/include/widgets/: button.hpp  hud.hpp  imageWidget.hpp  textWidget.hpp  valueGuage.hpp  widget.hpp
lightyearsEngine/src/: entrypoint.cpp
lightyearsEngine/src/framework/: actor.cpp  application.cpp  assetmanager.cpp  delegate.cpp  mathutility.cpp  object.cpp  physicssystem.cpp  timermanager.cpp  world.cpp
lightyearsEngine/src/gameplay/: gamestage.cpp  waitstage.cpp
lightyearsEngine/src/vfx/: particle.cpp
lightyearsEngine/src/widgets/: button.cpp  hud.cpp  imageWidget.cpp  textWidget.cpp  valueGuage.cpp  widget.cpp
lightyearsGame/: CMakeLists.txt  config.h.in
lightyearsGame/include/: config.h
lightyearsGame/include/enemy/: boss.hpp  bossStage.hpp  chaosStage.hpp  enemySpaceship.hpp  hexagon.hpp  hexagonStage.hpp  twinBlade.hpp  twinBladeStage.hpp  ufo.hpp  ufoStage.hpp  vanguard.hpp  vanguardStage.hpp
lightyearsGame/include/gameFramework/: gameApplication.hpp
lightyearsGame/include/gameplay/: healthComponent.hpp
lightyearsGame/include/level/: gameLevelOne.hpp  mainMenuLevel.hpp
lightyearsGame/include/player/: player.hpp  playerManager.hpp  playerspaceship.hpp  reward.hpp
lightyearsGame/include/spaceship/: spaceship.hpp
lightyearsGame/include/vfx/: explosion.hpp
lightyearsGame/include/weapon/: FrontalWiper.hpp  bullet.hpp  bulletshooter.hpp  shooter.hpp  threeWayShooter.hpp
lightyearsGame/include/widgets/: gameplayHUD.hpp  mainMenuHUD.hpp
lightyearsGame/src/enemy/: boss.cpp  bossStage.cpp  chaosStage.cpp  enemySpaceship.cpp  hexagon.cpp  hexagonStage.cpp  twinBlade.cpp  twinBladeStage.cpp  ufo.cpp  ufoStage.cpp  vanguard.cpp  vanguardStage.cpp
lightyearsGame/src/gameFrameWork/: gameApplication.cpp
lightyearsGame/src/gameplay/: healthComponent.cpp
lightyearsGame/src/level/: gameLevelOne.cpp  mainMenuLevel.cpp
lightyearsGame/src/player/: player.cpp  playerManager.cpp  playerspaceship.cpp  reward.cpp
lightyearsGame/src/spaceship/: spaceship.cpp
lightyearsGame/src/vfx/: explosion.cpp
lightyearsGame/src/weapon/: FrontalWiper.cpp  bullet.cpp  bulletshooter.cpp  shooter.cpp  threeWayShooter.cpp
lightyearsGame/src/widgets/: gameplayHUD.cpp  mainMenuHUD.cpp
